Made runtime Makefiles generate chpl_code.h/chpl_code.c automatically
Took Steve's checkin of the chapel_code.chpl/.c/.h to the next stage
by having the Makefiles generated chapel_code.c/.h automatically from
chapel_code.chpl during the make of the runtime.  Both of these files
currently end up in the src/ directory for simplicity -- in particular,
that's where they end up by default, and it makes their inclusion by
other files easier.

Rejiggered the runtime/src/Makefile*s in order to support a clean
make depend step, either before or after the chapel_code.* files
have been built.  This follows the pattern set by the compiler,
but is slightly more complicated due to the presence of the launcher
sources.

Added a new CFLAGS macro -- RUNTIME_GEN_CFLAGS so that developers
would get warnings when compiling chapel_code.c while users would
not.

I believe that in a cross-compilation environment, the runtime
may try to invoke the CHPL_TARGET_PLATFORM version of chpl
rather than the CHPL_SOURCE_PLATFORM version.  Need to take a look
at that still, but it'll be cleaner to do so as a separate checkin.



git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14506 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/Makefile.base
+++ b/make/Makefile.base
@@ -123,6 +123,11 @@ LIB_RT_DIR = lib/$(PLAT_COMP_SUBDIR)/$(COMM_THREAD_SUBDIR)
 LIB_LN_DIR = lib/$(PLAT_COMP_SUBDIR)/$(COMM_LAUNCH_SUBDIR)
 
 
+CHPL_BIN_DIR = $(CHAPEL_ROOT)/bin/$(CHPL_MAKE_PLATFORM)
+CHPL = $(CHPL_BIN_DIR)/chpl$(EXE_SUFFIX)
+RUNTIME_CHPL_FLAGS = --runtime --no-checks
+
+
 #
 # default tools
 # 
