--- a/make/compiler/Makefile.cray-mta
+++ b/make/compiler/Makefile.cray-mta
@@ -25,6 +25,7 @@ CFLAGS =
 
 COMP_CFLAGS = $(CFLAGS)
 RUNTIME_CFLAGS = $(CFLAGS)
+RUNTIME_GEN_CFLAGS = $(RUNTIME_CFLAGS)
 GEN_CFLAGS = $(CFLAGS) -WS 189
 GEN_LFLAGS = -static
 
