--- a/make/compiler/Makefile.cray-vec
+++ b/make/compiler/Makefile.cray-vec
@@ -27,5 +27,6 @@ CFLAGS = -hcpu=cray-$(CHPL_MAKE_PLATFORM) -hgnu
 
 COMP_CFLAGS = $(CFLAGS)
 RUNTIME_CFLAGS = $(CFLAGS) -DNO_BYTES_PER_LOCALE -DNO_CORES_PER_LOCALE
+RUNTIME_GEN_CFLAGS = $(RUNTIME_CFLAGS)
 GEN_CFLAGS = $(CFLAGS)
 
