--- a/make/compiler/Makefile.cray-xt
+++ b/make/compiler/Makefile.cray-xt
@@ -30,5 +30,6 @@ LDFLAGS= -target=linux
 
 COMP_CFLAGS = $(CFLAGS) $(XT_COMP_CFLAGS)
 RUNTIME_CFLAGS = $(CFLAGS)
+RUNTIME_GEN_CFLAGS = $(RUNTIME_CFLAGS)
 GEN_CFLAGS += $(CFLAGS) $(XT_GEN_CFLAGS)
 GEN_LFLAGS += $(LFLAGS)
