--- a/make/compiler/Makefile.intel
+++ b/make/compiler/Makefile.intel
@@ -30,6 +30,7 @@ PROFILE_LFLAGS = -pg
 COMP_CFLAGS = $(CFLAGS)
 COMP_CFLAGS_NONCHPL = -wr111,193,1418,1419
 RUNTIME_CFLAGS = -std=c99 $(CFLAGS) -wr181
+RUNTIME_GEN_CFLAGS = $(RUNTIME_CFLAGS)
 GEN_CFLAGS = -std=c99 -mp
 
 #
