--- a/make/compiler/Makefile.pathscale
+++ b/make/compiler/Makefile.pathscale
@@ -28,6 +28,7 @@ OPT_CFLAGS = -O3
 COMP_CFLAGS = $(CFLAGS)
 COMP_CFLAGS_NONCHPL = -Wno-error
 RUNTIME_CFLAGS = -std=c99 $(CFLAGS)
+RUNTIME_GEN_CFLAGS = $(RUNTIME_CFLAGS)
 GEN_CFLAGS = -std=c99
 
 #
