--- a/make/compiler/Makefile.pgi
+++ b/make/compiler/Makefile.pgi
@@ -28,6 +28,7 @@ OPT_CFLAGS = -O3
 COMP_CFLAGS = $(CFLAGS)
 COMP_CFLAGS_NONCHPL =
 RUNTIME_CFLAGS = $(CFLAGS)
+RUNTIME_GEN_CFLAGS = $(RUNTIME_CFLAGS)
 IEEE_FLOAT_GEN_CFLAGS = -Kieee
 
 #
