Specialized CHPL_MAKE_PLATFORM Makefile variable
Previously, any given Makefile would either be in host or
target mode, and CHPL_MAKE_PLATFORM would be set appropriately.
With this checkin, I added variables CHPL_MAKE_HOST_PLATFORM
and CHPL_MAKE_TARGET_PLATFORM so that we can distinguish
between host and target when necessary.  For example, when
building the runtime, the code is being created for the target,
but we need to use the host to find the location of the Chapel
compiler.

Unfortunately, not all references to CHPL_MAKE_PLATFORM can
be removed from the current Makefiles because of the fact that
we want our compiler settings to be usable for either a source
or a target.  Put another way, I don't think we have a clean
way to create CCFLAGS_HOST and CCFLAGS_TARGET, so we just
create CCFLAGS based on CHPL_MAKE_PLATFORM, which is set based
on what the current Makefile is aimed at creating.  That said,
I've tried to remove all references to CHPL_MAKE_PLATFORM that
don't need to be flexible in this way.

Also, removed a duplicate definition of GASNET_INSTALL_DIR as
GASNET_INSTALL in the Gasnet Makefiles.  And split
PLAT_COMP_SUBDIR into PLAT_COMPILER_SUBDIR and PLAT_RUNTIME_SUBDIR
in order to minimize the number of references to CHPL_MAKE_PLATFORM
and make things a little more explicit.



git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14515 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/Makefile.base
+++ b/make/Makefile.base
@@ -12,9 +12,7 @@ endif
 #
 # determine what platform we're running on
 #
-ifndef CHPL_MAKE_PLATFORM
 include $(CHAPEL_ROOT)/make/Makefile.platform
-endif
 
 ifndef CHPL_MAKE_COMPILER
 include $(CHAPEL_ROOT)/make/Makefile.compiler
@@ -63,11 +61,11 @@ ARMCI_INSTALL_DIR = $(ARMCI_DIR)/armci-$(ARMCI_VERSION)/lib/$(ARMCI_TARGET)
 ARMCI_LIB_DIR = $(ARMCI_INSTALL_DIR)
 
 GASNET_DIR = $(THIRD_PARTY_DIR)/gasnet
-GASNET_INSTALL_DIR = $(GASNET_DIR)/install/$(CHPL_MAKE_PLATFORM)-$(CHPL_MAKE_COMPILER)
+GASNET_INSTALL_DIR = $(GASNET_DIR)/install/$(CHPL_MAKE_TARGET_PLATFORM)-$(CHPL_MAKE_COMPILER)
 GASNET_LIB_DIR = $(GASNET_INSTALL_DIR)/lib
 
 MPICH1_DIR = $(THIRD_PARTY_DIR)/mpich1
-MPICH1_INSTALL_DIR = $(MPICH1_DIR)/install/$(CHPL_MAKE_PLATFORM)
+MPICH1_INSTALL_DIR = $(MPICH1_DIR)/install/$(CHPL_MAKE_TARGET_PLATFORM)
 MPICH1_LIB_DIR = $(MPICH1_INSTALL_DIR)/lib
 
 
@@ -79,11 +77,13 @@ default: all
 
 printplatform:
 	@echo "for $(CHPL_MAKE_HOST_TARGET)..."
-	@echo "CHPL_MAKE_PLATFORM    = $(CHPL_MAKE_PLATFORM)"
-	@echo "CHPL_MAKE_COMPILER    = $(CHPL_MAKE_COMPILER)"
-	@echo "CHPL_MAKE_THREADS     = $(CHPL_MAKE_THREADS)"
-	@echo "CHPL_MAKE_COMM        = $(CHPL_MAKE_COMM)"
-	@echo "CHPL_MAKE_LAUNCHER    = $(CHPL_MAKE_LAUNCHER)"
+	@echo "CHPL_MAKE_PLATFORM        = $(CHPL_MAKE_PLATFORM)"
+	@echo "CHPL_MAKE_HOST_PLATFORM   = $(CHPL_MAKE_HOST_PLATFORM)"
+	@echo "CHPL_MAKE_TARGET_PLATFORM = $(CHPL_MAKE_TARGET_PLATFORM)"
+	@echo "CHPL_MAKE_COMPILER        = $(CHPL_MAKE_COMPILER)"
+	@echo "CHPL_MAKE_THREADS         = $(CHPL_MAKE_THREADS)"
+	@echo "CHPL_MAKE_COMM            = $(CHPL_MAKE_COMM)"
+	@echo "CHPL_MAKE_LAUNCHER        = $(CHPL_MAKE_LAUNCHER)"
 
 #
 # OBJ_SUBDIR_MADE creates either a directory or a symbolic link,
@@ -95,8 +95,9 @@ printplatform:
 # Makefile command rules.
 #
 GEN_SUBDIR = gen
-PLAT_COMP_SUBDIR = $(CHPL_MAKE_PLATFORM)/$(CHPL_MAKE_COMPILER)
-OBJ_SUBDIR = $(GEN_SUBDIR)/$(PLAT_COMP_SUBDIR)
+PLAT_COMPILER_SUBDIR = $(CHPL_MAKE_HOST_PLATFORM)/$(CHPL_MAKE_COMPILER)
+PLAT_RUNTIME_SUBDIR = $(CHPL_MAKE_TARGET_PLATFORM)/$(CHPL_MAKE_COMPILER)
+OBJ_SUBDIR = $(GEN_SUBDIR)/$(PLAT_COMPILER_SUBDIR)
 OBJ_SUBDIR_TIMESTAMP = $(OBJ_SUBDIR)/.timestamp
 OBJ_SUBDIR_MADE = $(OBJ_SUBDIR_TIMESTAMP)
 OBJ_SUBDIR_SAFESLASH = $(subst /,\\/, $(OBJ_SUBDIR))
@@ -119,11 +120,11 @@ COMM_THREAD_SUBDIR = comm-$(CHPL_MAKE_COMM)/threads-$(CHPL_MAKE_THREADS)
 COMM_LAUNCH_SUBDIR = comm-$(CHPL_MAKE_COMM)/launch-$(CHPL_MAKE_LAUNCHER)
 RUNTIME_OBJDIR = $(OBJ_SUBDIR)/$(COMM_THREAD_SUBDIR)
 LAUNCHER_OBJDIR = $(OBJ_SUBDIR)/$(COMM_LAUNCH_SUBDIR)
-LIB_RT_DIR = lib/$(PLAT_COMP_SUBDIR)/$(COMM_THREAD_SUBDIR)
-LIB_LN_DIR = lib/$(PLAT_COMP_SUBDIR)/$(COMM_LAUNCH_SUBDIR)
+LIB_RT_DIR = lib/$(PLAT_RUNTIME_SUBDIR)/$(COMM_THREAD_SUBDIR)
+LIB_LN_DIR = lib/$(PLAT_RUNTIME_SUBDIR)/$(COMM_LAUNCH_SUBDIR)
 
 
-CHPL_BIN_DIR = $(CHAPEL_ROOT)/bin/$(CHPL_MAKE_PLATFORM)
+CHPL_BIN_DIR = $(CHAPEL_ROOT)/bin/$(CHPL_MAKE_HOST_PLATFORM)
 CHPL = $(CHPL_BIN_DIR)/chpl$(EXE_SUFFIX)
 RUNTIME_CHPL_FLAGS = --runtime --no-checks
 
