--- a/compiler/make/Makefile.compiler.head
+++ b/compiler/make/Makefile.compiler.head
@@ -17,7 +17,7 @@ CHAPEL_SUBDIR = compiler/$(COMPILER_SUBDIR)
 
 include $(CHAPEL_ROOT)/make/Makefile.base
 
-INCL_CFLAGS = -I. -I$(COMPILER_ROOT)/include/$(CHPL_MAKE_PLATFORM) -I$(COMPILER_ROOT)/include
+INCL_CFLAGS = -I. -I$(COMPILER_ROOT)/include/$(CHPL_MAKE_HOST_PLATFORM) -I$(COMPILER_ROOT)/include
 COMP_CFLAGS += $(INCL_CFLAGS)
 
 #
