--- a/make/Makefile.platform
+++ b/make/Makefile.platform
@@ -3,7 +3,9 @@
 #
 #
 # CHPL_MAKE_PLATFORM is simply the one-word description we'll use for
-# all platforms that we run on.  The long name is being used to avoid
+# all platforms that we run on.  The long name is used to avoid
 # PLATFORM which is sometimes set by shell environments.
 #
 CHPL_MAKE_PLATFORM = $(shell $(CHAPEL_ROOT)/util/platform.pl $(CHPL_MAKE_HOST_TARGET))
+CHPL_MAKE_HOST_PLATFORM = $(shell $(CHAPEL_ROOT)/util/platform.pl --host)
+CHPL_MAKE_TARGET_PLATFORM = $(shell $(CHAPEL_ROOT)/util/platform.pl --target)
