--- a/make/platform/Makefile.xt-cnl
+++ b/make/platform/Makefile.xt-cnl
@@ -1,5 +1,5 @@
 ifeq ($(CHPL_COMM), gasnet)
   CHPL_GASNET_CONDUIT = portals
-  GEN_CFLAGS += -I$(GASNET_INSTALL)/patched_headers
+  GEN_CFLAGS += -I$(GASNET_INSTALL_DIR)/patched_headers
   GEN_LFLAGS += -L/usr/lib64/nptl
 endif
