--- a/runtime/etc/Makefile.include
+++ b/runtime/etc/Makefile.include
@@ -6,10 +6,10 @@ LD = $(CC)
 include $(CHAPEL_ROOT)/runtime/etc/Makefile.threads-$(CHPL_MAKE_THREADS)
 include $(CHAPEL_ROOT)/runtime/etc/Makefile.comm-$(CHPL_MAKE_COMM)
 
-CHAPEL_RT_INC_DIR = $(CHAPEL_ROOT)/runtime/include/threads-$(CHPL_MAKE_THREADS) -I$(CHAPEL_ROOT)/runtime/include/comm-$(CHPL_MAKE_COMM) -I$(CHAPEL_ROOT)/runtime/include/comp-$(CHPL_MAKE_COMPILER) -I$(CHAPEL_ROOT)/runtime/include/$(CHPL_MAKE_PLATFORM) -I$(CHAPEL_ROOT)/runtime/include
+CHAPEL_RT_INC_DIR = $(CHAPEL_ROOT)/runtime/include/threads-$(CHPL_MAKE_THREADS) -I$(CHAPEL_ROOT)/runtime/include/comm-$(CHPL_MAKE_COMM) -I$(CHAPEL_ROOT)/runtime/include/comp-$(CHPL_MAKE_COMPILER) -I$(CHAPEL_ROOT)/runtime/include/$(CHPL_MAKE_TARGET_PLATFORM) -I$(CHAPEL_ROOT)/runtime/include
 CHAPEL_RT_LIB_DIR = $(CHAPEL_ROOT)/$(LIB_RT_DIR)
 
-CHAPEL_LN_INC_DIR = -I$(CHAPEL_ROOT)/runtime/include/$(CHPL_MAKE_PLATFORM) -I$(CHAPEL_ROOT)/runtime/include
+CHAPEL_LN_INC_DIR = -I$(CHAPEL_ROOT)/runtime/include/$(CHPL_MAKE_TARGET_PLATFORM) -I$(CHAPEL_ROOT)/runtime/include
 CHAPEL_LN_LIB_DIR = $(CHAPEL_ROOT)/$(LIB_LN_DIR)
 
 LAUNCHER_SRC_NAME = $(TMPDIRNAME)/config.c
