--- a/runtime/make/Makefile.runtime.head
+++ b/runtime/make/Makefile.runtime.head
@@ -21,7 +21,7 @@ include $(CHAPEL_ROOT)/make/Makefile.base
 LAUNCHER_CFLAGS = $(RUNTIME_CFLAGS) -DLAUNCHER
 LAUNCHER_INCLS = -I$(RUNTIME_ROOT)/include
 
-RUNTIME_INCLS = -I. -I$(RUNTIME_ROOT)/include/threads-$(CHPL_MAKE_THREADS) -I$(RUNTIME_ROOT)/include/comm-$(CHPL_MAKE_COMM) -I$(RUNTIME_ROOT)/include/comp-$(CHPL_MAKE_COMPILER) -I$(RUNTIME_ROOT)/include/$(CHPL_MAKE_PLATFORM) -I$(RUNTIME_ROOT)/include
+RUNTIME_INCLS = -I. -I$(RUNTIME_ROOT)/include/threads-$(CHPL_MAKE_THREADS) -I$(RUNTIME_ROOT)/include/comm-$(CHPL_MAKE_COMM) -I$(RUNTIME_ROOT)/include/comp-$(CHPL_MAKE_COMPILER) -I$(RUNTIME_ROOT)/include/$(CHPL_MAKE_TARGET_PLATFORM) -I$(RUNTIME_ROOT)/include
 
 
 RUNTIME_OBJ_DIR = ./$(RUNTIME_OBJDIR)
