More Makefile improvements
Fixed a cross-compilation problem that I introduced in my last
checkin, but hadn't noticed on the linux boxes.

Combined all of the rules that built timestamps/subdirectories
into one pattern rule for simplicity and to remove one more
instance of CHPL_MAKE_PLATFORM.




git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14517 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/Makefile.base
+++ b/make/Makefile.base
@@ -96,30 +96,22 @@ printplatform:
 #
 GEN_SUBDIR = gen
 PLAT_COMPILER_SUBDIR = $(CHPL_MAKE_HOST_PLATFORM)/$(CHPL_MAKE_COMPILER)
-PLAT_RUNTIME_SUBDIR = $(CHPL_MAKE_TARGET_PLATFORM)/$(CHPL_MAKE_COMPILER)
 OBJ_SUBDIR = $(GEN_SUBDIR)/$(PLAT_COMPILER_SUBDIR)
 OBJ_SUBDIR_TIMESTAMP = $(OBJ_SUBDIR)/.timestamp
 OBJ_SUBDIR_MADE = $(OBJ_SUBDIR_TIMESTAMP)
 OBJ_SUBDIR_SAFESLASH = $(subst /,\\/, $(OBJ_SUBDIR))
 
-ifndef CHPLDEVTMP
-$(OBJ_SUBDIR_TIMESTAMP):
-	@echo making $(OBJ_SUBDIR) subdirectory to store platform-specific files
-	@mkdir -p $(OBJ_SUBDIR)
-	@-touch $(OBJ_SUBDIR_TIMESTAMP)
-else
-$(OBJ_SUBDIR_TIMESTAMP):
-	@echo linking $(OBJ_SUBDIR) subdirectory to store platform-specific files
-	@mkdir -p $(CHPLDEVTMP)/chapel-$(USER)$(CURDIR)/$(OBJ_SUBDIR)
-	@rm -f $(OBJ_SUBDIR)
-	@ln -s $(CHPLDEVTMP)/chapel-$(USER)$(CURDIR)/$(CHPL_MAKE_PLATFORM) .
-	@-touch $(OBJ_SUBDIR_TIMESTAMP)
-endif
+%/.timestamp:
+	@echo making $* subdirectory to store platform-specific files
+	@mkdir -p $*
+	@-touch $*/.timestamp
 
 COMM_THREAD_SUBDIR = comm-$(CHPL_MAKE_COMM)/threads-$(CHPL_MAKE_THREADS)
 COMM_LAUNCH_SUBDIR = comm-$(CHPL_MAKE_COMM)/launch-$(CHPL_MAKE_LAUNCHER)
-RUNTIME_OBJDIR = $(OBJ_SUBDIR)/$(COMM_THREAD_SUBDIR)
-LAUNCHER_OBJDIR = $(OBJ_SUBDIR)/$(COMM_LAUNCH_SUBDIR)
+PLAT_RUNTIME_SUBDIR = $(CHPL_MAKE_TARGET_PLATFORM)/$(CHPL_MAKE_COMPILER)
+RUNTIME_OBJ_SUBDIR = $(GEN_SUBDIR)/$(PLAT_RUNTIME_SUBDIR)
+RUNTIME_OBJDIR = $(RUNTIME_OBJ_SUBDIR)/$(COMM_THREAD_SUBDIR)
+LAUNCHER_OBJDIR = $(RUNTIME_OBJ_SUBDIR)/$(COMM_LAUNCH_SUBDIR)
 LIB_RT_DIR = lib/$(PLAT_RUNTIME_SUBDIR)/$(COMM_THREAD_SUBDIR)
 LIB_LN_DIR = lib/$(PLAT_RUNTIME_SUBDIR)/$(COMM_LAUNCH_SUBDIR)
 
