Using --local to compile chapel_code.chpl
Forcing the use of --local when compiling chapel_code.chpl
to ensure a clean compilation on GASNet/ARMCI.  Not sure
if this is correct for the long-term, though -- it's simply
more similar to what we had when Steve checked chapel_code.c
into SVN.



git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14518 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/Makefile.base
+++ b/make/Makefile.base
@@ -118,7 +118,7 @@ LIB_LN_DIR = lib/$(PLAT_RUNTIME_SUBDIR)/$(COMM_LAUNCH_SUBDIR)
 
 CHPL_BIN_DIR = $(CHAPEL_ROOT)/bin/$(CHPL_MAKE_HOST_PLATFORM)
 CHPL = $(CHPL_BIN_DIR)/chpl$(EXE_SUFFIX)
-RUNTIME_CHPL_FLAGS = --runtime --no-checks
+RUNTIME_CHPL_FLAGS = --runtime --no-checks --local
 
 
 #
