Improving cross-compilation launch capabilities; added xmt-sim platform
As noted in my "launcher" check in log from quite some time
ago, I had made the simplifying assumption that the source
and target platforms used for the launcher and launchee
binaries were the same in order to simplify the changes that
I needed to make for the Makefile.  These changes were somewhat
similar to the ones that I had to make for the chapel_code.c
compilation changes this morning, so I went ahead and tackled
them as well.  In particular, like the chapel_code.c change,
the launcher script is funny in that it wants to be compiled
in host mode while the launchee wants to be compiled in target
mode.  Since any given Makefile only has a single set of CFLAGS,
etc. this wasn't possible in our Makefile architecture in any
simple manner.

I approached this by moving the runtime/Makefile into a helper
Makefile -- runtime/Makefile.help.  The top-level Makefile now
takes any top-level command and invokes Makefile.help twice --
once for the launcher, and once for the launchee.  Makefile.help
puts itself into host mode for the launcher and target mode for
the launchee, and therefore gets all the right settings.  The
only other thing that remained was to make each directory
specialize its TARGETS variable based on whether it was the
launcher or launchee.  As long as I was doing this, I also
specialized the SUBDIRS variable such that any directories that
are not used for launcher/launchee are no longer descended into.
Thus, launch-none should not be compiled for a standard build
anymore.

The only problem that I've been able to find so far is that
doing a "make" from the runtime directory (rather than a "make all")
causes the runtime to be built twice.  I believe this is because
it's matching my % pattern once for the "default" rule and a
second time for the "all" rule that the default rule says should
be built.  Need to think on this one a bit more, but have made the
top-level Makefile use a "make a

--- a/runtime/comm-gasnet/Makefile
+++ b/runtime/comm-gasnet/Makefile
@@ -10,9 +10,15 @@ COMM_OBJDIR = $(RUNTIME_OBJDIR)
 COMM_LAUNCHER_OBJDIR = $(LAUNCHER_OBJDIR)
 include Makefile.share
 
+ifeq ($(MAKE_LAUNCHER),0)
 TARGETS = \
 	$(COMM_OBJS) \
+
+else
+TARGETS = \
 	$(COMM_LAUNCHER_OBJS) \
+
+endif
 
 include $(RUNTIME_ROOT)/make/Makefile.runtime.subdirrules
 
