--- a/runtime/comm-none/Makefile
+++ b/runtime/comm-none/Makefile
@@ -10,9 +10,15 @@ COMM_OBJDIR = $(RUNTIME_OBJDIR)
 COMM_LAUNCHER_OBJDIR = $(LAUNCHER_OBJDIR)
 include Makefile.share
 
+ifeq ($(MAKE_LAUNCHER),0)
 TARGETS = \
 	$(COMM_OBJS) \
+
+else
+TARGETS = \
 	$(COMM_LAUNCHER_OBJS) \
+
+endif
 
 include $(RUNTIME_ROOT)/make/Makefile.runtime.subdirrules
 
