--- a/runtime/etc/Makefile.include
+++ b/runtime/etc/Makefile.include
@@ -9,22 +9,11 @@ include $(CHAPEL_ROOT)/runtime/etc/Makefile.comm-$(CHPL_MAKE_COMM)
 CHAPEL_RT_INC_DIR = $(CHAPEL_ROOT)/runtime/include/threads-$(CHPL_MAKE_THREADS) -I$(CHAPEL_ROOT)/runtime/include/comm-$(CHPL_MAKE_COMM) -I$(CHAPEL_ROOT)/runtime/include/comp-$(CHPL_MAKE_COMPILER) -I$(CHAPEL_ROOT)/runtime/include/$(CHPL_MAKE_TARGET_PLATFORM) -I$(CHAPEL_ROOT)/runtime/include
 CHAPEL_RT_LIB_DIR = $(CHAPEL_ROOT)/$(LIB_RT_DIR)
 
-CHAPEL_LN_INC_DIR = -I$(CHAPEL_ROOT)/runtime/include/$(CHPL_MAKE_TARGET_PLATFORM) -I$(CHAPEL_ROOT)/runtime/include
-CHAPEL_LN_LIB_DIR = $(CHAPEL_ROOT)/$(LIB_LN_DIR)
-
-LAUNCHER_SRC_NAME = $(TMPDIRNAME)/config.c
-
 all: $(CHPL_CL_OBJS) FORCE
 	$(CC) $(GEN_CFLAGS) $(COMP_GEN_CFLAGS) -c -o $(TMPBINNAME).o -I$(CHAPEL_RT_INC_DIR) -I. $(CHPLSRC)
 	$(LD) $(GEN_LFLAGS) $(COMP_GEN_LFLAGS) -o $(TMPBINNAME) -L$(CHAPEL_RT_LIB_DIR) $(TMPBINNAME).o $(CHAPEL_RT_LIB_DIR)/main.o $(CHPL_CL_OBJS) -lchpl -lm $(LIBS)
 ifneq ($(CHPL_MAKE_LAUNCHER),none)
-	cp $(TMPBINNAME) $(BINNAME)_real
-	rm $(TMPBINNAME)
-	echo "#include \"chplcgfns.h\"" > $(LAUNCHER_SRC_NAME)
-	echo "#include \"config.h\"" >> $(LAUNCHER_SRC_NAME)
-	echo "#include \"_config.c\"" >> $(LAUNCHER_SRC_NAME)
-	$(CC) $(GEN_CFLAGS) $(COMP_GEN_CFLAGS) -c -o $(TMPBINNAME).o -I$(CHAPEL_LN_INC_DIR) -I. $(LAUNCHER_SRC_NAME)
-	$(LD) $(GEN_LFLAGS) $(COMP_GEN_LFLAGS) -o $(TMPBINNAME) -L$(CHAPEL_LN_LIB_DIR) $(TMPBINNAME).o $(CHAPEL_LN_LIB_DIR)/main_launcher.o $(CHPL_CL_OBJS) -lchpllaunch
+	$(MAKE) -f $(CHAPEL_ROOT)/runtime/etc/Makefile.launcher all CHAPEL_ROOT=$(CHAPEL_ROOT) TMPBINNAME=$(TMPBINNAME) BINNAME=$(BINNAME) TMPDIRNAME=$(TMPDIRNAME)
 endif
 	cp $(TMPBINNAME) $(BINNAME)
 	rm $(TMPBINNAME)
