Removed relative path to chapel_code.h
Removed the relative path to chapel_code.h in order
to keep things more uniform in general and for the
Xcode project in particular.



git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14521 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/runtime/threads-pthreads/Makefile
+++ b/runtime/threads-pthreads/Makefile
@@ -6,6 +6,8 @@ RUNTIME_SUBDIR = threads-pthreads
 #
 include $(RUNTIME_ROOT)/make/Makefile.runtime.head
 
+RUNTIME_INCLS += -I../src/
+
 THREADS_OBJDIR = $(RUNTIME_OBJDIR)
 include Makefile.share
 
