Fixing intel chapel_code.c compile errors
This required two fixes:

1) export routines were accidentally having prototypes generated
   in both chapel_code.h and chapel_code.c -- this caused the C
   compiler to complain about an external prototype within a C
   source file.  Since I changed chapel_code.c to #include
   chapel_code.h the other day, these prototypes were no longer
   necessary, so squelched them.

2) Added the -Wno-unused flag to the intel compile line as we do
   with gnu.  If anyone wants a side project doing housecleaning,
   getting our generated code clean with respect to this flag
   would be nice.  :)



git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14525 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/compiler/Makefile.intel
+++ b/make/compiler/Makefile.intel
@@ -81,5 +81,6 @@ SUPPORT_SETENV_CFLAGS = -std=gnu89 -wr10121
 ifdef CHPL_DEVELOPER
 COMP_CFLAGS += $(WARN_CXXFLAGS)
 RUNTIME_CFLAGS += $(WARN_CFLAGS)
+RUNTIME_GEN_CFLAGS += -Wno-unused
 # GEN_CFLAGS gets warnings added via WARN_GEN_CFLAGS in comp-generated Makefile
 endif
