Oops -- fixing bash/sh incompatability for real
I had this wrong before -- the export is required in this
context.  Rewrote the rule to be sh-compatible by breaking
the export and assignment into two statements.



git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14529 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/runtime/src/Makefile
+++ b/runtime/src/Makefile
@@ -41,4 +41,4 @@ $(RUNTIME_OBJ_DIR)/chapel_code.o: chapel_code.c $(RUNTIME_OBJ_DIR_STAMP) chapel_
 	$(CC) -c $(RUNTIME_GEN_CFLAGS) $(RUNTIME_INCLS) -o $@ $<
 
 chapel_code.c chapel_code.h: chapel_code.chpl $(CHPL)
-	CHPL_HOME=$(CHAPEL_ROOT) && $(CHPL) $(RUNTIME_CHPL_FLAGS) $<
+	export CHPL_HOME && CHPL_HOME=$(CHAPEL_ROOT) && $(CHPL) $(RUNTIME_CHPL_FLAGS) $<
