--- a/runtime/make/Makefile.runtime.head
+++ b/runtime/make/Makefile.runtime.head
@@ -15,7 +15,7 @@ endif
 CHAPEL_ROOT = $(RUNTIME_ROOT)/..
 CHAPEL_SUBDIR = runtime/$(RUNTIME_SUBDIR)
 
-ifeq ($(MAKE_LAUNCHER),0)
+ifneq ($(MAKE_LAUNCHER),1)
 CHPL_MAKE_HOST_TARGET = --target
 endif
 include $(CHAPEL_ROOT)/make/Makefile.base
