--- a/runtime/src/Makefile
+++ b/runtime/src/Makefile
@@ -10,7 +10,7 @@ COMMON_OBJDIR = $(RUNTIME_OBJDIR)
 COMMON_LAUNCHER_OBJDIR = $(LAUNCHER_OBJDIR)
 include Makefile.share
 
-ifeq ($(MAKE_LAUNCHER),0)
+ifneq ($(MAKE_LAUNCHER),1)
 TARGETS = \
 	$(COMMON_OBJS) \
 	$(MAIN_OBJS) \
@@ -44,4 +44,6 @@ chapel_code.c chapel_code.h: chapel_code.chpl $(CHPL)
 	export CHPL_HOME && CHPL_HOME=$(CHAPEL_ROOT) && $(CHPL) $(RUNTIME_CHPL_FLAGS) $<
 
 OTHER_DEPEND_RULES = \
-	@test -r chapel_code.h || (echo "/* PLACEHOLDER HEADER */" > chapel_code.h && touch chpl_code.chpl)
+	@test -r chapel_code.h || (echo "/* PLACEHOLDER HEADER */\n\#include \"stdchplrt.h\"" > chapel_code.h; touch chapel_code.chpl); \
+	test -r chapel_code.c || (echo "/* PLACEHOLDER CODE */\n\#include \"chapel_code.h\"" > chapel_code.c;  touch chapel_code.chpl); \
+	$(CMAKEDEPEND) $(RUNTIME_GEN_CFLAGS) $(RUNTIME_INCLS) chapel_code.c | sed s/chapel_code\\\.o/\\\$(RUNTIME_OBJ_DIR_SAFESLASH)\\\/chapel_code\\\.o/ >> $(SVN_DEPENDS).tmp
