Fixing launcher Makefile dependences
Due to a very subtle thing being printed when compiling
launcher runtime directories (the gen/ directory's
timestamp was being removed after a make or make depend),
found that I hadn't gotten the make depend step correct
for the launcher directories.  Fixed this by refactoring
a number of aspects of the make depend step -- directory,
flags, includes, etc. into new makefile variables that
are set depending in one of two ways depending on whether
we're building the runtime or the launcher.



git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14543 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/runtime/make/Makefile.runtime.foot
+++ b/runtime/make/Makefile.runtime.foot
@@ -33,8 +33,8 @@ echoruntimedir:
 # pattern-based rules
 #
 
-%.depend: %.c $(RUNTIME_OBJ_DIR_STAMP)
-	@$(CMAKEDEPEND) $(RUNTIME_CFLAGS) $(RUNTIME_INCLS) $< | sed s/$*\\\.o/\\\$(RUNTIME_OBJ_DIR_SAFESLASH)\\\/$*\\\.o/ >> $(SVN_DEPENDS).tmp
+%.depend: %.c $(DEPEND_STAMP)
+	@$(CMAKEDEPEND) $(DEPEND_CFLAGS) $(DEPEND_INCLS) $< | sed s/$*\\\.o/\\\$(DEPEND_DIR_SAFESLASH)\\\/$*\\\.o/ >> $(SVN_DEPENDS).tmp
 
 $(RUNTIME_OBJ_DIR)/%.o: %.c $(RUNTIME_OBJ_DIR_STAMP)
 	@if [ `grep "chplrt.h" $< | wc -l` -ne 1 ]; then echo "PROBLEM:  $< does not include 'chplrt.h'."; exit 1; fi
