--- a/compiler/AST/Makefile.share
+++ b/compiler/AST/Makefile.share
@@ -6,7 +6,7 @@ AST_SRCS = \
         build.cpp \
 	expr.cpp \
         iterator.cpp \
-	pragmas.cpp \
+	flags.cpp \
 	primitive.cpp \
 	stmt.cpp \
 	symbol.cpp \
