A few minor makefile changes for launchers with GASNet
With these small changes to avoid linking GASNet to the launcher binary, I
was able to run Chapel codes using Brad's pbs launcher on XT hardware over
portals.

Also, util/commSubstrate.pl was checking for the platform "cray-xt" instead
of "xt-cnl" causing it to choose udp instead of portals.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14592 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/runtime/comm-gasnet/Makefile.share
+++ b/runtime/comm-gasnet/Makefile.share
@@ -13,7 +13,7 @@ COMM_OBJS = \
 
 COMM_LAUNCHER_OBJS = \
 	$(COMM_LAUNCHER_SRCS:%.c=$(COMM_LAUNCHER_OBJDIR)/%.o)
-
+ifeq ($(MAKE_LAUNCHER), 0)
 include $(GASNET_INSTALL_DIR)/include/$(CHPL_GASNET_CONDUIT)-conduit/$(CHPL_GASNET_CONDUIT)-par.mak
 
 # 
@@ -39,6 +39,7 @@ include $(GASNET_INSTALL_DIR)/include/$(CHPL_GASNET_CONDUIT)-conduit/$(CHPL_GASN
 # compiled -O3 is linked to GASNet compiled with debugging enabled
 #
 RUNTIME_CFLAGS += $(GASNET_CFLAGS) -I$(GASNET_INSTALL_DIR)/include -I$(GASNET_INSTALL_DIR)/include/$(CHPL_GASNET_CONDUIT)-conduit $(SUPPORT_SETENV_CFLAGS) -O0
+endif
 
 ifdef CHPL_DEVELOPER
 RUNTIME_CFLAGS += -Wno-strict-prototypes -Wno-missing-prototypes
