--- a/runtime/etc/Makefile.comm-gasnet
+++ b/runtime/etc/Makefile.comm-gasnet
@@ -1,6 +1,8 @@
+ifeq ($(MAKE_LAUNCHER), 0)
 include $(GASNET_INSTALL_DIR)/include/$(CHPL_GASNET_CONDUIT)-conduit/$(CHPL_GASNET_CONDUIT)-par.mak
 
 CC = $(GASNET_CC) $(GASNET_CFLAGS) -I$(GASNET_INSTALL_DIR)/include -I$(GASNET_INSTALL_DIR)/include/$(CHPL_GASNET_CONDUIT)-conduit
 LD = $(GASNET_LD) $(GASNET_LFLAGS)
 
 LIBS += $(GASNET_LIBS)
+endif
