--- a/runtime/etc/Makefile.include
+++ b/runtime/etc/Makefile.include
@@ -13,7 +13,7 @@ all: $(CHPL_CL_OBJS) FORCE
 	$(CC) $(GEN_CFLAGS) $(COMP_GEN_CFLAGS) -c -o $(TMPBINNAME).o -I$(CHAPEL_RT_INC_DIR) -I. $(CHPLSRC)
 	$(LD) $(GEN_LFLAGS) $(COMP_GEN_LFLAGS) -o $(TMPBINNAME) -L$(CHAPEL_RT_LIB_DIR) $(TMPBINNAME).o $(CHAPEL_RT_LIB_DIR)/main.o $(CHPL_CL_OBJS) -lchpl -lm $(LIBS)
 ifneq ($(CHPL_MAKE_LAUNCHER),none)
-	$(MAKE) -f $(CHAPEL_ROOT)/runtime/etc/Makefile.launcher all CHAPEL_ROOT=$(CHAPEL_ROOT) TMPBINNAME=$(TMPBINNAME) BINNAME=$(BINNAME) TMPDIRNAME=$(TMPDIRNAME)
+	$(MAKE) -f $(CHAPEL_ROOT)/runtime/etc/Makefile.launcher all CHAPEL_ROOT=$(CHAPEL_ROOT) TMPBINNAME=$(TMPBINNAME) BINNAME=$(BINNAME) TMPDIRNAME=$(TMPDIRNAME) MAKE_LAUNCHER=1
 endif
 	cp $(TMPBINNAME) $(BINNAME)
 	rm $(TMPBINNAME)
