Refactored GASNet Makefiles
As alluded to in the "next week" portion of my STATUS message for
about six months now, I finally refactored the GASNet Makefiles.
As with all Makefile changes, this has been hard to test thoroughly
so please let me know if you find problems (and I'll check the
regressions over the weekend as well).

* moved GASNet get installed into a directory name uniquified
  by the segment type and debug/nodbg in order to support
  multiple versions simultaneously for developer's convenience.
  Note that the conduit is not used to uniquify the directory
  because I'm assuming that we'll only be doing portals or udp
  for a particular platform.

* hoisted variables that were common to multiple Makefiles into
  Makefile.base

* added a helpful Makefile error message to the runtime's make
  steps if GASNet's .mak file is missing

* unified the portals vs. non-portals rules in 
  third-party/gasnet/Makefile

* moved configure logic out of commConfigureOpts.pl (no longer
  used) and into third-party/gasnet/Makefile, since it is so
  GASNet-specific

* decoupled GASNet's debug mode from CHPL_DEVELOPER.  setenv
  CHPL_COMM_DEBUG to a non-empty value in order to compile/use
  GASNet for debug mode

* removed the CHPL_GASNET_CONDUIT variable and replaced it with
  the CHPL_COMM_SUBSTRATE variable which is intended to be
  used by ARMCI as well, and which is determined by the 
  commSubstrate.pl script if unset.

* Continue to se CHPL_GASNET_SEGMENT to select a segment other
  than the default (fast if you're using portals, everything
  otherwise).




git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14721 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/Makefile.base
+++ b/make/Makefile.base
@@ -60,9 +60,33 @@ ARMCI_SRC_DIR = $(ARMCI_DIR)/armci-$(ARMCI_VERSION)
 ARMCI_INSTALL_DIR = $(ARMCI_DIR)/armci-$(ARMCI_VERSION)/lib/$(ARMCI_TARGET)
 ARMCI_LIB_DIR = $(ARMCI_INSTALL_DIR)
 
+#
+# GASNet stuff
+#
+# the gasnet version
+GASNET_VERSION = 1.10.0
+GASNET_SUBDIR = $(GASNET_ABS_DIR)/GASNet-$(GASNET_VERSION)
+# determine the segment if the user hasn't specified onex
+ifndef CHPL_GASNET_SEGMENT
+ifeq ($(CHPL_MAKE_COMM_SUBSTRATE),portals)
+CHPL_GASNET_SEGMENT = fast
+else
+CHPL_GASNET_SEGMENT = everything
+endif
+endif
+# decide whether to do a debug or no-debug build
+ifdef CHPL_COMM_DEBUG
+CHPL_GASNET_DEBUG = debug
+CHPL_GASNET_CFG_OPTIONS += --enable-debug
+else
+CHPL_GASNET_DEBUG = nodbg
+endif
+# directories
 GASNET_DIR = $(THIRD_PARTY_DIR)/gasnet
-GASNET_INSTALL_DIR = $(GASNET_DIR)/install/$(CHPL_MAKE_TARGET_PLATFORM)-$(CHPL_MAKE_COMPILER)
+GASNET_INSTALL_SUBDIR = install/$(CHPL_MAKE_TARGET_PLATFORM)-$(CHPL_MAKE_COMPILER)/seg-$(CHPL_GASNET_SEGMENT)/$(CHPL_GASNET_DEBUG)
+GASNET_INSTALL_DIR = $(GASNET_DIR)/$(GASNET_INSTALL_SUBDIR)
 GASNET_LIB_DIR = $(GASNET_INSTALL_DIR)/lib
+GASNET_INC_MAKEFILE = $(GASNET_INSTALL_DIR)/include/$(CHPL_MAKE_COMM_SUBSTRATE)-conduit/$(CHPL_MAKE_COMM_SUBSTRATE)-par.mak
 
 MPICH1_DIR = $(THIRD_PARTY_DIR)/mpich1
 MPICH1_INSTALL_DIR = $(MPICH1_DIR)/install/$(CHPL_MAKE_TARGET_PLATFORM)
@@ -83,6 +107,7 @@ printplatform:
 	@echo "CHPL_MAKE_COMPILER        = $(CHPL_MAKE_COMPILER)"
 	@echo "CHPL_MAKE_THREADS         = $(CHPL_MAKE_THREADS)"
 	@echo "CHPL_MAKE_COMM            = $(CHPL_MAKE_COMM)"
+	@echo "CHPL_MAKE_COMM_SUBSTRATE  = $(CHPL_MAKE_COMM_SUBSTRATE)"    
 	@echo "CHPL_MAKE_LAUNCHER        = $(CHPL_MAKE_LAUNCHER)"
 
 #
