--- a/runtime/etc/Makefile.comm-gasnet
+++ b/runtime/etc/Makefile.comm-gasnet
@@ -1,7 +1,7 @@
 ifneq ($(MAKE_LAUNCHER), 1)
-include $(GASNET_INSTALL_DIR)/include/$(CHPL_GASNET_CONDUIT)-conduit/$(CHPL_GASNET_CONDUIT)-par.mak
+include $(GASNET_INC_MAKEFILE)
 
-CC = $(GASNET_CC) $(GASNET_CFLAGS) -I$(GASNET_INSTALL_DIR)/include -I$(GASNET_INSTALL_DIR)/include/$(CHPL_GASNET_CONDUIT)-conduit
+CC = $(GASNET_CC) $(GASNET_CFLAGS) -I$(GASNET_INSTALL_DIR)/include -I$(GASNET_INSTALL_DIR)/include/$(CHPL_MAKE_COMM_SUBSTRATE)-conduit
 LD = $(GASNET_LD) $(GASNET_LFLAGS)
 
 LIBS += $(GASNET_LIBS)
