--- a/make/Makefile.comm
+++ b/make/Makefile.comm
@@ -5,6 +5,4 @@
 #
 CHPL_MAKE_COMM = $(shell $(CHAPEL_ROOT)/util/comm.pl)
 
-ifeq ($(CHPL_MAKE_COMM), gasnet)
-  CHPL_GASNET_CONDUIT = udp
-endif
+CHPL_MAKE_COMM_SUBSTRATE = $(shell $(CHAPEL_ROOT)/util/commSubstrate.pl)
