Cleaner approach to squelching XT info messages
Finally understood the make info page as soon as I hit commit: 
This gives the same functionality as my previous checkin, but
has the advantate of not cluttering up every invocation of the
cc compiler.



git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14725 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/compiler/Makefile.cray-xt
+++ b/make/compiler/Makefile.cray-xt
@@ -2,12 +2,14 @@
 # Settings for the Cray XT3 and XT4
 #
 
+export XTPE_INFO_MESSAGE_OFF=true
+
 #
 # tools
 #
 
-CC = export XTPE_INFO_MESSAGE_OFF=true && cc
-CXX = export XTPE_INFO_MESSAGE_OFF=true && CC
+CC = cc
+CXX = CC
 
 MAKEDEPEND = $(CXX) -M
 CMAKEDEPEND = $(CC) -M
