--- a/make/Makefile.comm
+++ b/make/Makefile.comm
@@ -3,6 +3,10 @@
 #
 #
 #
-CHPL_MAKE_COMM = $(shell $(CHAPEL_ROOT)/util/comm.pl)
+# We have to export CHPL_COMM here in order to make these settings
+# work properly when building in third-party directories where we
+# explicitly set CHPL_COMM...
+#
+CHPL_MAKE_COMM = $(shell export CHPL_COMM=$(CHPL_COMM) && $(CHAPEL_ROOT)/util/comm.pl)
 
-CHPL_MAKE_COMM_SUBSTRATE = $(shell $(CHAPEL_ROOT)/util/commSubstrate.pl)
+CHPL_MAKE_COMM_SUBSTRATE = $(shell export CHPL_COMM=$(CHPL_COMM) && $(CHAPEL_ROOT)/util/commSubstrate.pl)
