Once again, converting bash export syntax to sh export syntax
Fixing my change from yesterday.  This will fix the Sun builds.



git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14744 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/Makefile.comm
+++ b/make/Makefile.comm
@@ -7,6 +7,6 @@
 # work properly when building in third-party directories where we
 # explicitly set CHPL_COMM...
 #
-CHPL_MAKE_COMM = $(shell export CHPL_COMM=$(CHPL_COMM) && $(CHAPEL_ROOT)/util/comm.pl)
+CHPL_MAKE_COMM = $(shell export CHPL_COMM && CHPL_COMM=$(CHPL_COMM) && $(CHAPEL_ROOT)/util/comm.pl)
 
-CHPL_MAKE_COMM_SUBSTRATE = $(shell export CHPL_COMM=$(CHPL_COMM) && $(CHAPEL_ROOT)/util/commSubstrate.pl)
+CHPL_MAKE_COMM_SUBSTRATE = $(shell export CHPL_COMM && CHPL_COMM=$(CHPL_COMM) && $(CHAPEL_ROOT)/util/commSubstrate.pl)
