Moved the code that calls destructors for variables that go out of scope into a separate pass after the parallel pass.  Updated the appropriate Makefile and the Xcode project.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14757 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/compiler/passes/Makefile.share
+++ b/compiler/passes/Makefile.share
@@ -1,13 +1,14 @@
 PASSES_SRCS = \
         buildDefaultFunctions.cpp \
         cleanup.cpp \
-	codegen.cpp \
+        codegen.cpp \
         copyCollect.cpp \
-	filesToAST.cpp \
-	flattenClasses.cpp \
+        filesToAST.cpp \
+        flattenClasses.cpp \
         flattenFunctions.cpp \
-	insertLineNumbers.cpp \
+        insertLineNumbers.cpp \
         parallel.cpp \
+        insertDestructors.cpp \
         normalize.cpp \
         scopeResolve.cpp \
         semanticChecks.cpp
